# react-jwt-login

./: .eslintrc.json  README.md  cypress.json  package-lock.json  package.json
cypress/integration/: login_spec.js
django_jwt/: README.md  db.sqlite3  pyproject.toml  requirements.txt
django_jwt/config/: asgi.py  settings.py  urls.py  wsgi.py
src/: App.js  index.css  index.js
src/components/: Home.js  Login.js  Login.test.js  NotFound404.js  Register.js  Welcome.js
src/services/: auth.services.js
src/store/actions/: authActions.js
src/store/reducers/: authReducer.js
