[tool.poetry]
name = "django_jwt"
version = "0.1.0"
description = ""
authors = ["pwalger <pwalger@taoglas.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
djoser = "^2.1.0"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
